src/test/resources/30/single/xhtml/valid/style-001.xhtml
<?xml version="1.0" encoding="UTF-8"?>
<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
    <head>
        <title>Style 001</title>
        <style>
            body {color:black;}
        </style>        
    </head>
    <body style="color:black">
        <section>
            <style scoped="">
                
            </style>
            <h2>section</h2>
            <p>...</p>
        </section>
        <section>
            <style scoped="">
                
            </style>
            <style scoped="">
                
            </style>
            <h2>section</h2>
            <p>...</p>
        </section>
    </body>
</html>
