src/test/resources/30/single/xhtml/invalid/issue288-invalid-uri.xhtml
<?xml version="1.0" encoding="UTF-8"?>
<html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops"
    xml:lang="en-US" lang="en-US">
    <head>
        <meta charset="UTF-8" />
        <title>Title</title>
    </head>

    <body>
        <h2>Title</h2>
        <a href="  http://idpf.org">Valid URI</a>
        <a href="http://  idpf.org">Invalid URI</a>
    </body>
</html>
